--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "live-server": "^1.2.1",
     "mongoose": "^5.8.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
