--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "live-server": "^1.2.1",
     "mongoose": "^5.8.5",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "pg": "^7.18.2"
   }
 }
